# mri_cnn

./: pyproject.toml
datasets/: dataset.py
tests/: mri_cnn.ipynb  mri_cnn2.ipynb  test_mri_cnn.py
