[tool.poetry]
name = "mri_cnn"
version = "0.1.0"
description = ""
authors = ["bali <buridaikon2481@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
sklearn = "^0.0"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.1"
tqdm = "^4.60.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
